@@ -1,3 +1,11 @@
+Mon Jul 29 20:53:24 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* enumerator.c (enumerator_init): Add a frozenness check to
+	  prevent a frozen Enumerator object from being reinitialized with
+	  a different enumerable object.  This is the least we should do,
+	  and more fixes will follow. [Fixes GH-368] Patch by Kenichi
+	  Kamiya.
+
 Mon Jul 29 20:14:24 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* hash.c (rb_hash_assoc): revert r42224. table->type->compare is
